# rust-services

./: Cargo.toml  README.md  data.db
src/: main.rs
src/handlers/: handler.rs
src/repositories/: database.rs
src/services/: service.rs
