[package]
name = "api-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = "1.0.228"
tokio = { version = "1.50.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "macros"] }
dotenvy = "0.15"
async-trait = "0.1.89"
rayon = "1.11.0"
anyhow = "1.0.102"
